rework login (not finished yet)
