# doc/openapi_league.yaml
@@ -19,17 +19,23 @@ components:
               description:
                 type: string
 paths:
-  /login/email:
+  /login/password:
     post:
       description: "Login with a link that is sent via email"
-      responses:
-        '200':
-          description: "Link sent (if allowed)"
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
+      requestBody:
+        description: If user_id is set, this is preferred and email is ignored
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                email:
+                  type: string
+                password:
+                  type: string
         '500':
           $ref: '#/components/responses/GeneralError'
   /user/set_name:
